tests/paczka2/big_fuzzy/32745738.err
Error in line 2: S251 A458 50,4
Error in line 14: 6a1q51pmb A916 70,4
Error in line 31: 6a1q51pmb Su51 36,1
Error in line 24: 6a1q51pmb A458 50,0
Error in line 35: 6a1q51pmb S251 166,1
Error in line 38: 6a1q51pmb A916 60,2
Error in line 39: o6nSuQ A916 96,5
Error in line 47: o6nSuQ S251 15,4
Error in line 50: S251 S251 25,4
Error in line 48: kHvuN1WPL A458 7,9
Error in line 59: gXFl S982 24,2
Error in line 74: o6nSuQ A458 53,7
Error in line 66: kHvuN1WPL A458 3,2
Error in line 80: 6a1q51pmb A916 30,45
Error in line 58: 6a1q51pmb S982 30,2
Error in line 88: 6a1q51pmb A916 43,9
Error in line 93: S251 A458 26,8
Error in line 96: 6a1q51pmb S251 5,4
Error in line 92: Z8kQqTD A916 85,7
Error in line 103: gXFl S251 96,51
Error in line 101: o6nSuQ A916 91,8
Error in line 102: Z8kQqTD A458 97,2
Error in line 110: gXFl S251 247,9
Error in line 109: Z8kQqTD S982 55,0
Error in line 120: S251 A916 66,2
Error in line 127: o6nSuQ A458 85,2
Error in line 133: o6nSuQ S982 53,8
Error in line 130: S251 S251 69,4
Error in line 134: kHvuN1WPL A916 28,5
Error in line 139: o6nSuQ S25> >0>,4
Error in line 135: o6nSuQ S251 46,1
Error in line 146: o6nSuQ A458 26,9
Error in line 148: o6nSuQ A916 40,5
Error in line 152: o6nSuQ S982 76,6
Error in line 153: USgB1Ahy A458 38,7
Error in line 156: USgB1Ahy S251 77,4
Error in line 157: USgB1Ahy A458 84,3
Error in line 161: 6a1q51pmb A458 16,5
Error in line 162: 6a1q51pmb S251 88,2
Error in line 163: kHvuN1WPL S982 68,7
Error in line 181: Z8kQqTD A458 18,9
Error in line 187: USgB1Ahy S982 10,9
Error in line 193: kHvuN1WPL A458 53,8
Error in line 192: S251 A916 27,6
Error in line 198: gXFl A916 80,7
Error in line 215: gXFl A916 26,5
Error in line 214: kHvuN1WPL S251 11,2
Error in line 222: 6a1q51pmb A458 7,2
Error in line 225: 6a1q51pmb A916 23,1
Error in line 243: gXFl A916 15,4
Error in line 234: USgB1Ahy S251 95,3
